# cosmos

./: .gitignore  Cargo.toml  Dockerfile  README.md
ai-companion/: .env.example  Dockerfile  README.md  docker-compose.cpu.yml  docker-compose.yml  pyproject.toml
ai-companion/scripts/: dev.sh  start.sh  stop.sh
ai-companion/src/: __init__.py  config.py  main.py  models.py
ai-companion/src/api/: __init__.py  routes.py
ai-companion/src/chat/: __init__.py  service.py
ai-companion/src/llm/: __init__.py  base.py  ollama_provider.py  openai_provider.py  router.py
ai-companion/src/memory/: __init__.py  embedding.py  memory_manager.py  vector_store.py
ai-companion/src/prompt/: __init__.py  personality.py  templates.py
backend/: .env.example  Dockerfile  README.md  STATUS.md  USAGE.md  docker-compose.yml  package-lock.json  package.json  test-api.sh
costik-agent/: .env.example  Cargo.toml  Dockerfile  README.md
costik-deploy/: docker-compose.yml  test-chain.ts  test-e2e.sh
costik-node/: .env.example  Cargo.toml  Dockerfile  README.md
costik-node/src/: chain_cache.rs  chain_submitter.rs  config.rs  leader.rs  main.rs  rule_engine.rs  types.rs
costik-node/src/gossip/: engine.rs  network.rs
docs/: AGENT_THREAT_MODEL.md  AI_AUTONOMOUS_OPERATION.md  BAZI_JSON_MANIFEST_DESIGN.md  BAZI_PALLET_REDUNDANCY_DEEP_ANALYSIS.md  COMMUNITY_POINTS_GOVERNANCE.md  COSMOS_RENAME_FILE_LIST.md  COSMOS_RENAME_GUIDE.md  COSMOS_RENAME_MASTER_PLAN.md  DEPOSIT_FUNCTIONALITY_ANALYSIS_CN.md  EVIDENCE_PHASE_1_5_ANALYSIS.md  FRONTEND_DESIGN_ROADMAP.md  FRONTEND_DEV_GUIDE.md  FRONTEND_SDK_DESIGN.md  LIVESTREAM_BACKEND_DESIGN.md  LIVESTREAM_DESIGN_EVALUATION.md  LIVESTREAM_DEVELOPMENT_PLAN.md  LIVESTREAM_MODULE_DESIGN.md  MOBILE_DEVELOPMENT_ROADMAP.md  MOBILE_FRONTEND_REQUIREMENTS_MAPPING.md  MOBILE_FRONTEND_TECHNICAL_DESIGN.md  NEXUS_BOT_FEATURE_DEVELOPMENT.md  NEXUS_DEVELOPMENT_ROADMAP.md  NEXUS_DISCORD_GROUP_MANAGEMENT.md  NEXUS_LAYERED_STORAGE_DESIGN.md  NEXUS_NODE_REWARD_DESIGN.md  NEXUS_TELEGRAM_API_EVALUATION.md  OCW_TEE_COMMON_DESIGN.md  OCW_TEE_COMMON_DESIGN_ANALYSIS.md  OPTIMAL_DEVELOPMENT_PLAN.md  QIMEN_JSON_MANIFEST_DESIGN.md  RELAY_CHAIN_DESIGN.md  RENAME_STARDUST_TO_COSMOS.md  SECURITY_AUDIT_DEEP_ANALYSIS.md  SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_REPORT_V2.md  STARDUST_PROJECT_DEEP_REVIEW.md  TECH_STACK.md  TEE_PRIVACY_DESIGN.md  TEE_REFACTOR_PLAN.md  UI_COLORS.md
env-setup/: README.md
frontend/: .gitignore  MOBILE_DEVELOPMENT_FIXED.md  MOBILE_STARTUP_FIX.md  README.md  STARTUP_DEBUG.md  app.json  babel.config.js  metro-transformer.js  metro.config.js  (+4 more)
nexus-agent/: .env.example  AUDIT.md  Cargo.toml  Dockerfile  README.md
nexus-agent/src/: config.rs  crypto.rs  discord_executor.rs  executor.rs  group_config.rs  local_processor.rs  local_store.rs  main.rs  multicaster.rs  signer.rs  types.rs  webhook.rs
nexus-agent/src/gateway/: discord.rs
nexus-agent/src/platform/: discord.rs  mod.rs  telegram.rs
node/: Cargo.toml
node-operator/: .env.example  Cargo.toml  README.md
node-operator/src/: agent.rs  approval.rs  cloud_provider.rs  cloud_tools.rs  lib.rs  lightning.rs  llm_client.rs  main.rs  remote_tools.rs  ssh.rs  tools.rs
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/chat/common/: Cargo.toml  README.md
pallets/chat/common/src/: lib.rs  rate_limit.rs  traits.rs  types.rs  validation.rs
pallets/chat/permission/: Cargo.toml  README.md
pallets/chat/permission/src/: mock.rs  types.rs
pallets/costik/bot-consensus/: Cargo.toml
pallets/costik/bot-consensus/src/: mock.rs  tests.rs
pallets/costik/bot-group-mgmt/: Cargo.toml
pallets/costik/bot-group-mgmt/src/: lib.rs  mock.rs  tests.rs
pallets/divination/daliuren/: Cargo.toml  README.md
pallets/divination/daliuren/src/: lib.rs  mock.rs  ocw_tee.rs
pallets/divination/ocw-tee/: Cargo.toml  README.md
pallets/divination/ocw-tee/src/: crypto.rs  lib.rs  registry.rs  tests.rs  traits.rs  types.rs
pallets/divination/tee-enclave/: Cargo.toml
pallets/divination/tee-enclave/src/: crypto.rs  error.rs  keys.rs  lib.rs  runtime.rs  types.rs
pallets/divination/tee-enclave/src/divination/: bazi.rs  daliuren.rs  liuyao.rs  meihua.rs  mod.rs  qimen.rs  tarot.rs  xiaoliuren.rs  ziwei.rs
pallets/divination/tee-privacy/: Cargo.toml
pallets/divination/tee-privacy/src/: attestation.rs  benchmarking.rs  integration_tests.rs  lib.rs  mock.rs  runtime_api.rs  tests.rs  types.rs  weights.rs
pallets/entity/commission/common/: Cargo.toml
pallets/entity/commission/common/src/: lib.rs
pallets/meowstar/pet/: Cargo.toml
pallets/meowstar/pet/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/nexus/bot-registry/: Cargo.toml
pallets/nexus/bot-registry/src/: lib.rs  tests.rs
pallets/referral/: Cargo.toml  README.md
pallets/referral/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/sharemall/: Cargo.toml  FRONTEND_PAGES.md  README.md
pallets/sharemall/commission/: Cargo.toml  README.md
pallets/sharemall/commission/src/: lib.rs
pallets/sharemall/common/: Cargo.toml
pallets/sharemall/common/src/: lib.rs
pallets/sharemall/governance/: Cargo.toml  README.md
pallets/sharemall/governance/src/: lib.rs
pallets/sharemall/market/: Cargo.toml  README.md
pallets/sharemall/market/src/: lib.rs
pallets/sharemall/member/: Cargo.toml  README.md
pallets/sharemall/member/src/: lib.rs
pallets/sharemall/order/: Cargo.toml  README.md
pallets/sharemall/order/src/: lib.rs
pallets/sharemall/product/: Cargo.toml  README.md
pallets/sharemall/product/src/: lib.rs
pallets/sharemall/review/: Cargo.toml
pallets/sharemall/review/src/: lib.rs
pallets/sharemall/shop/: Cargo.toml  README.md
pallets/sharemall/shop/src/: lib.rs
pallets/sharemall/src/: lib.rs  mock.rs  tests.rs  types.rs
pallets/sharemall/token/: Cargo.toml  README.md
pallets/sharemall/token/src/: lib.rs
pallets/template/: Cargo.toml
pallets/trading/common/: Cargo.toml  README.md
pallets/trading/common/src/: lib.rs  mask.rs  time.rs  traits.rs  types.rs  validation.rs
(+983 files in other folders)
