[workspace.package]
license = "MIT-0"
authors = ["Cosmos Team"]
homepage = "https://cosmos.app/"
repository = "https://github.com/memoio/cosmos.git"
edition = "2021"

[workspace]
members = [
    "node",
    "pallets/affiliate",
    "pallets/chat/common",
    "pallets/chat/permission",
    "pallets/chat/core",
    "pallets/chat/group",
    "pallets/chat/contacts",
    "pallets/trading/common",
    "pallets/trading/pricing",
    "pallets/trading/credit",
    "pallets/trading/maker",
    "pallets/trading/swap",
    "pallets/trading/otc",
    "pallets/dispute/escrow",
    "pallets/referral",
    "pallets/storage/service",
    "pallets/dispute/evidence",
    "pallets/dispute/arbitration",
    "pallets/storage/lifecycle",
    "pallets/social/matchmaking/common",
    "pallets/social/matchmaking/profile",
    "pallets/social/matchmaking/matching",
    "pallets/social/matchmaking/recommendation",
    "pallets/social/matchmaking/interaction",
    "pallets/social/matchmaking/membership",
# Entity pallets (原 ShareMall，已重构为子模块)
    "pallets/entity/common",
    "pallets/entity/shop",
    "pallets/entity/registry",
    "pallets/entity/token",
    "pallets/entity/governance",
    "pallets/entity/member",
    "pallets/entity/commission",
    "pallets/entity/service",
    "pallets/entity/transaction",
    "pallets/entity/market",
    "pallets/entity/review",
    "pallets/entity/disclosure",
    "pallets/entity/kyc",
    "pallets/entity/sale",
    "media-utils",
    "runtime",
]
resolver = "2"
exclude = ["node-operator"]

[workspace.dependencies]
cosmos-runtime = { path = "./runtime", default-features = false }
pallet-affiliate = { path = "./pallets/affiliate", default-features = false }
# Chat pallets
pallet-chat-common = { path = "./pallets/chat/common", default-features = false }
pallet-chat-permission = { path = "./pallets/chat/permission", default-features = false }
pallet-chat-core = { path = "./pallets/chat/core", default-features = false }
pallet-chat-group = { path = "./pallets/chat/group", default-features = false }
pallet-chat-contacts = { path = "./pallets/chat/contacts", default-features = false }
# Trading pallets
pallet-trading-common = { path = "./pallets/trading/common", default-features = false }
pallet-trading-pricing = { path = "./pallets/trading/pricing", default-features = false }
pallet-trading-credit = { path = "./pallets/trading/credit", default-features = false }
pallet-trading-maker = { path = "./pallets/trading/maker", default-features = false }
pallet-trading-swap = { path = "./pallets/trading/swap", default-features = false }
pallet-trading-otc = { path = "./pallets/trading/otc", default-features = false }
# Escrow, Referral, IPFS pallets
pallet-escrow = { path = "./pallets/dispute/escrow", default-features = false }
pallet-referral = { path = "./pallets/referral", default-features = false }
pallet-storage-service = { path = "./pallets/storage/service", default-features = false }
# Cosmos common libraries
media-utils = { path = "./media-utils", default-features = false }
# Evidence pallet
pallet-evidence = { path = "./pallets/dispute/evidence", default-features = false }
# Arbitration pallet
pallet-arbitration = { path = "./pallets/dispute/arbitration", default-features = false }
# Storage lifecycle pallet
pallet-storage-lifecycle = { path = "./pallets/storage/lifecycle", default-features = false }
# Matchmaking pallets
pallet-matchmaking-common = { path = "./pallets/social/matchmaking/common", default-features = false }
pallet-matchmaking-profile = { path = "./pallets/social/matchmaking/profile", default-features = false }
pallet-matchmaking-matching = { path = "./pallets/social/matchmaking/matching", default-features = false }
pallet-matchmaking-recommendation = { path = "./pallets/social/matchmaking/recommendation", default-features = false }
pallet-matchmaking-interaction = { path = "./pallets/social/matchmaking/interaction", default-features = false }
pallet-matchmaking-membership = { path = "./pallets/social/matchmaking/membership", default-features = false }
# Entity pallets (原 ShareMall，已重构为子模块)
pallet-entity-common = { path = "./pallets/entity/common", default-features = false }
pallet-entity-shop = { path = "./pallets/entity/shop", default-features = false }
pallet-entity-registry = { path = "./pallets/entity/registry", default-features = false }
pallet-entity-token = { path = "./pallets/entity/token", default-features = false }
pallet-entity-governance = { path = "./pallets/entity/governance", default-features = false }
pallet-entity-member = { path = "./pallets/entity/member", default-features = false }
pallet-entity-commission = { path = "./pallets/entity/commission", default-features = false }
pallet-entity-service = { path = "./pallets/entity/service", default-features = false }
pallet-entity-transaction = { path = "./pallets/entity/transaction", default-features = false }
pallet-entity-market = { path = "./pallets/entity/market", default-features = false }
pallet-entity-review = { path = "./pallets/entity/review", default-features = false }
pallet-entity-disclosure = { path = "./pallets/entity/disclosure", default-features = false }
pallet-entity-kyc = { path = "./pallets/entity/kyc", default-features = false }
pallet-entity-sale = { path = "./pallets/entity/sale", default-features = false }
# Additional dependencies
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sp-application-crypto = { version = "44.0.0", default-features = false }
clap = { version = "4.5.13" }
frame-benchmarking-cli = { version = "53.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.13.0", default-features = false }
frame-system = { version = "45.0.0", default-features = false }
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.24.3" }
pallet-transaction-payment = { version = "45.0.0", default-features = false }
pallet-assets = { version = "48.1.0", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "25.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "48.0.0", default-features = false }
sc-basic-authorship = { version = "0.53.0", default-features = false }
sc-cli = { version = "0.57.0", default-features = false }
sc-client-api = { version = "44.0.0", default-features = false }
sc-consensus = { version = "0.54.0", default-features = false }
sc-consensus-aura = { version = "0.55.0", default-features = false }
sc-consensus-grandpa = { version = "0.40.0", default-features = false }
sc-executor = { version = "0.47.0", default-features = false }
sc-network = { version = "0.55.0", default-features = false }
sc-offchain = { version = "50.0.0", default-features = false }
sc-service = { version = "0.56.0", default-features = false }
sc-telemetry = { version = "30.0.0", default-features = false }
sc-transaction-pool = { version = "44.0.0", default-features = false }
sc-transaction-pool-api = { version = "43.0.0", default-features = false }
sp-api = { version = "40.0.0", default-features = false }
sp-block-builder = { version = "40.0.0", default-features = false }
sp-blockchain = { version = "43.0.0", default-features = false }
sp-consensus-aura = { version = "0.46.0", default-features = false }
sp-core = { version = "39.0.0", default-features = false }
sp-genesis-builder = { version = "0.21.0", default-features = false }
sp-inherents = { version = "40.0.0", default-features = false }
sp-io = { version = "44.0.0", default-features = false }
sp-keyring = { version = "45.0.0", default-features = false }
sp-runtime = { version = "45.0.0", default-features = false }
sp-arithmetic = { version = "28.0.0", default-features = false }
sp-timestamp = { version = "40.0.0", default-features = false }
substrate-frame-rpc-system = { version = "49.0.0", default-features = false }
substrate-build-script-utils = { version = "11.0.0", default-features = false }
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec" }
frame-benchmarking = { version = "45.0.0", default-features = false }
frame-executive = { version = "45.0.0", default-features = false }
frame-support = { version = "45.0.0", default-features = false }
frame-system-benchmarking = { version = "45.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "40.0.0", default-features = false }
frame-try-runtime = { version = "0.51.0", default-features = false }
pallet-aura = { version = "44.0.0", default-features = false }
pallet-balances = { version = "46.0.0", default-features = false }
pallet-grandpa = { version = "45.0.0", default-features = false }
pallet-sudo = { version = "45.0.0", default-features = false }
pallet-collective = { version = "45.0.0", default-features = false }
pallet-collective-membership = { package = "pallet-membership", version = "45.0.0", default-features = false }
pallet-timestamp = { version = "44.0.0", default-features = false }
pallet-contracts = { version = "45.0.1", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "45.0.0", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
sp-consensus-grandpa = { version = "27.0.0", default-features = false }
sp-offchain = { version = "40.0.0", default-features = false }
sp-session = { version = "42.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-transaction-pool = { version = "40.0.0", default-features = false }
sp-version = { version = "43.0.0", default-features = false }
substrate-wasm-builder = { version = "31.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
log = { version = "0.4.22", default-features = false }
lite-json = { version = "0.2", default-features = false }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

