[package]
name = "costik-node"
version = "0.1.0"
edition = "2021"
description = "Costik Project Node — 项目节点，验签/Gossip共识/Leader执行/规则引擎/批量上链"
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server (接收 Agent 消息)
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client (Leader → Agent 回传)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# WebSocket (Gossip)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Ed25519 验签
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# SHA256
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Environment variables
dotenvy = "0.15"

# Hex
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Prometheus metrics
# prometheus = "0.13"

# Dashmap for concurrent state
dashmap = "6"

# Substrate chain client (dynamic API — no compile-time metadata needed)
subxt = { version = "0.38", features = ["substrate-compat"] }
subxt-signer = { version = "0.38", features = ["sr25519", "subxt"] }
codec = { package = "parity-scale-codec", version = "3.6", features = ["derive"] }
sp-core = { version = "34", default-features = false, features = ["std"] }

[[bin]]
name = "costik-node"
path = "src/main.rs"
