[package]
name = "nexus-agent"
version = "0.1.0"
edition = "2021"
description = "Nexus Agent — 群主本地代理，接收 Webhook、Ed25519 签名、确定性多播到项目节点"
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server (Webhook 接收)
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client (多播到节点 + TG API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ed25519 签名
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# SHA256 哈希
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Environment variables
dotenvy = "0.15"

# Hex encoding (公钥显示)
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Atomic file operations (sequence 持久化)
atomicwrites = "0.4"

# Regex (BlacklistRule)
regex = "1"

# WebSocket (Discord Gateway)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# URL parsing
url = "2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "nexus-agent"
path = "src/main.rs"
