[package]
name = "node-operator"
version = "0.1.0"
edition = "2021"
description = "LLM-powered node operator agent for Substrate nodes"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async trait
async-trait = "0.1"

# Environment variables
dotenvy = "0.15"

# SSH - 使用系统 ssh 命令，无需额外依赖

# File handling
tokio-util = { version = "0.7", features = ["io"] }

# UUID for session tracking
uuid = { version = "1.0", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Home directory
dirs = "5.0"

[[bin]]
name = "node-operator"
path = "src/main.rs"
