[package]
name = "pallet-referral"
version = "1.0.0"
description = "推荐关系管理模块 - Referral Management Pallet (从 pallet-affiliate 抽离)"
authors = ["Cosmos Team"]
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/memoio/cosmos"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"], default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
sp-runtime = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[dev-dependencies]
sp-io = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
