[package]
name = "pallet-chat-permission"
version = "0.1.0"
authors = ["Stardust Team"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lao-sha/stardust"
description = "聊天权限系统模块 - 基于场景的多场景共存权限控制"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
log = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
sp-api = { workspace = true }

# 本地依赖
pallet-chat-common = { path = "../common", default-features = false }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"log/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-core/std",
	"sp-api/std",
	"pallet-chat-common/std",
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
