[package]
name = "pallet-bot-consensus"
version = "0.1.0"
authors = ["Cosmos Team"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/memoio/cosmos"
description = "去中心化多节点验证共识模块 — 节点注册/质押/消息确认/Equivocation检测"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
log = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }
pallet-balances = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"log/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-core/std",
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
