[package]
name = "pallet-bot-group-mgmt"
version = "0.1.0"
authors = ["Cosmos Team"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/memoio/cosmos"
description = "链上群组管理规则模块 — 群规则配置/动作日志/自动审批策略"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
log = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"log/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-core/std",
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
