[package]
name = "pallet-daliuren"
version = "0.1.0"
description = "大六壬排盘系统 - 区块链式盘占卜模块"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
sp-runtime.workspace = true
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
pallet-balances.workspace = true
pallet-timestamp.workspace = true

# 黄历模块 - 统一农历转换
pallet-almanac = { path = "../almanac", default-features = false }

# 隐私授权模块
pallet-divination-privacy = { path = "../privacy", default-features = false }

# 通用模块 - 押金管理
pallet-divination-common = { path = "../common", default-features = false }

# OCW-TEE 模块
pallet-divination-ocw-tee = { path = "../ocw-tee", default-features = false }

[dev-dependencies]
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-io/std",
    "sp-std/std",
    "pallet-balances/std",
    "pallet-timestamp/std",
    "pallet-almanac/std",
    "pallet-divination-privacy/std",
    "pallet-divination-common/std",
    "pallet-divination-ocw-tee/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
